syntax = "proto3";

option go_package = ".;pb";
message HelloRequest {
  string msg = 1;
}
message HelloResponse {
  string msg = 1;
}



service Server {
  rpc Hello(HelloRequest) returns(HelloResponse);
  rpc Hello2(HelloRequest) returns(HelloResponse);
}








